v2/k3s-manifests/frontend-wandoor/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wandoor-frontend
  namespace: wandoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wandoor-frontend
  template:
    metadata:
      labels:
        app: wandoor-frontend
    spec:
      containers:
        - name: wandoor-frontend
          image: jrtr1/wandoor-frontend-app:frontend-05825f426acb681c29045e38c5e7400e419c5bd2
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wandoor
spec:
  selector:
    app: wandoor-frontend
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      # nodePort: 30081
