v2/k3s-manifests/frontend-wandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wandoor-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: wandoor.my.id
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
